--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.h1 {
+    font-size: 128px;
+    /* line-height: 100px; */
+    font-weight: 200px;
+}
+
+.some {
+    font-family: 'Inter';
+    font-style: italic;
+    font-weight: 200;
+    font-size: 17.1059px;
+    line-height: 29px;
+}
